# timesfm

./: .gitignore  pyproject.toml
myStuff/: equity_benchmark_compare.py  equity_compare_config.toml  plot_latest_finetuned_forecast.py  sample.ipynb  sample_with_covars.py  timesfm_finetune_yfinance.py  timesfm_ticker_with_benchmarks.py
src/timesfm.egg-info/: PKG-INFO  requires.txt
