[project]
name = "timesfm"
version = "2.0.0"
description = "A time series foundation model."
authors = [
    {name = "Rajat Sen", email = "senrajat@google.com"},
    {name = "Yichen Zhou", email = "yichenzhou@google.com"},
    {name = "Abhimanyu Das", email = "abhidas@google.com"},
    {name = "Petros Mol", email = "pmol@google.com"},
    {name = "Michael Chertushkin", email = "chertushkinmichael@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "huggingface_hub>=0.23.0",
    "safetensors>=0.5.3",
    "yfinance>=1.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "tensorboard>=2.20.0",
    "setuptools>=82.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
flax = [
    "flax",
    "optax",
    "einshape",
    "orbax-checkpoint",
    "jaxtyping",
    "jax[cuda]; platform_system == 'Linux'",
    "jax; platform_system != 'Linux'",
]
xreg = [
    "jax[cuda]; platform_system == 'Linux'",
    "jax; platform_system != 'Linux'",
    "scikit-learn",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.uv.sources]
timesfm = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "timesfm[xreg]",
    "torch>=2.10.0",
]
